[package]
name = "c2-utility"
version = "0.1.0"
edition = "2024"
authors = ["info@mannykimani.com"]
description = "Advanced C2 utility for educational purposes"

[dependencies]
# Serialization/Deserialization - Learning how to convert Rust structs to/from JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Encryption - Learning AES-GCM encryption for secure communications
aes-gcm = "0.10"

# Random number generation - For generating encryption keys and nonces
rand = "0.8"

# Base64 encoding - For encoding binary data as text
base64 = "0.21"

# Hostname detection - For getting system information
hostname = "0.3"

[dev-dependencies]
# For testing
tokio-test = "0.4"

[profile.release]
# Optimization settings for release builds
opt-level = 3        # Maximum optimization
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization at cost of compile time
strip = true         # Remove debug symbols

[profile.dev]
# Development profile for faster compilation
opt-level = 0        # No optimization for faster compile times
